# vk.c

./: .clang-format  .prettierrc  CMakeLists.txt  Doxyfile.ini  README.md  asan.supp  compile.sh  run_instance.sh  validate.sh
examples/: CMakeLists.txt  device.c  instance.c  shader.c  simple.c  vk.c
include/: logger.h  vk-device.h  vk-instance.h  vk-shader.h
shaders/: sum.comp
src/: logger.c  vk-device.c  vk-instance.c  vk-shader.c
